# cosmic-rs

./: Cargo.toml  README.md  Trunk.toml  bonnie.toml  feedback_users.md  install.sh  netlify.toml  package-lock.json  tailwind.config.js
crates/components/: Cargo.toml
crates/cosmicli/: Cargo.toml
crates/cosmicli/src/: main.rs
site/: Cargo.toml  index.html
site/src/: app.rs  main.rs  routing.rs  theme.rs
site/src/pages/: about.rs  home.rs
src/: main.rs
style/: output.css
