[workspace]
resolver = "2"
edition = "2021"
members = ["crates/components", "site", "crates/cosmicli"]
# exclude = ["site"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
components = { path = "crates/components", default-features = false }
site = { path = "./site", default-features = false }
cosmicli = { path = "crates/cosmicli", default-features = false }

