[package]
name = "cosmicli"
edition = "2021"
# Alternative to web app
description = "A Command Line tool for developing cosmic date tool"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.5", features = ["derive"] }
derive = "1.0.0"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
